@@ -71,7 +71,7 @@
         {
             try
             {
-                var info = new InjectionConsumerInfo(implementationType, implementationType, parameter);
+                var info = new InjectionConsumerInfo(implementationType, parameter);
                 this.container.Options.DependencyInjectionBehavior.GetInstanceProducerFor(info);
 
                 return true;
