@@ -7,9 +7,10 @@
     using System.Linq.Expressions;
     using System.Reflection;
     using System.Threading.Tasks;
-    using Lifestyles;
     using Microsoft.VisualStudio.TestTools.UnitTesting;
+
     using SimpleInjector.Advanced;
+    using SimpleInjector.Lifestyles;
     using SimpleInjector.Tests.Unit;
 
     [TestClass]
